# fast_zero

./: .coverage  .env  .gitignore  database.db  pyproject.toml
alembic/: env.py
alembic/versions/: 5af9e5be0f81_table_users.py  7d2f2a36edd4_recreate_users_table.py  9a7e81479024_create_todos_table.py
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/versions/: caad46514504_create_users_table.py  cae188a655e2_update_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py  teste_db.py
