[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Mabe Informática <mabeinformatica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'uvicorn fast_zero.app:app --reload'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
