[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Mabe Informática <mabeinformatica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'uvicorn fast_zero.app:app --reload'
test = 'pytest -s -x --cov=fast_zero -vv'

[tool.pytest.ini_options]
pythronpath = '.'
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
